# blockchain

./: CMakeLists.txt  flake.nix  main.cpp
lib/: blockchain.cpp  blockchain.h  broadcast.cpp  broadcast.h  crypto.h  design.cpp  design.h  log.h  sha256.cpp
